--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,8 @@
+markdown: redcarpet
+
+redcarpet:
+  extensions: ["no_intra_emphasis", "fenced_code_blocks", "tables"]
+  
 include:
   - zsemlebot/index.md
   - README.md
